<resources>
    <string name="app_name">StoryApp</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Logout</string>
    <string name="message_welcome_page">Want to stay active in cyberspace without having to go here and there? Just use StoryApp!</string>
    <string name="message_login_page">Please enter your personal data first</string>
    <string name="message_main_page">Enjoy the StoryApp Features.</string>
    <string name="title_welcome_page">Welcome to StoryApp!</string>
    <string name="title_login_page">Login</string>
    <string name="title_register_page">Register</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="hint_email">Enter your email</string>
    <string name="hint_password">Enter your password</string>
    <string name="hint_name">Enter your name</string>
    <string name="register_failed_message">Register Failed!</string>
    <string name="register_success_message">Register Success!</string>
    <string name="login_failed_message">Login Failed!</string>
    <string name="login_success_message">Login Success!</string>
    <string name="password_required">Password must have at least 8 characters!</string>
    <string name="email_required">Enter email in correct format!</string>
    <string name="logout_description">Logout Icon</string>
    <string name="item_image_description">Story Image</string>
    <string name="story_name">Story Name</string>
    <string name="story_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="error_fetch_message">Failed to retrieve data</string>
    <string name="detail_header">Detail Story</string>
    <string name="main_header">StoryApp</string>
    <string name="fab_description">Upload Story</string>
    <string name="upload_header">Upload Story</string>
    <string name="image_preview_description">Image Preview</string>
    <string name="text_camera">Camera</string>
    <string name="text_gallery">Gallery</string>
    <string name="text_upload">Upload</string>
    <string name="hint_description">Enter description</string>
    <string name="no_image_selected">No image selected</string>
    <string name="empty_image_warning">Enter image first!</string>
    <string name="unknown_error">Unknown error!</string>
    <string name="null_error">Null error!</string>
    <string name="title_activity_map">Map</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="retry">Retry</string>
    <string name="input_location">Input Location</string>
    <string name="empty_description_warning">Description cannot be empty!</string>
    <string name="location_not_found">Location not found</string>
    <string name="location_error">Location error</string>
    <string name="success_upload">Upload success</string>
    <string name="story_location">Latitude: %1$s, longitude: %2$s</string>
</resources>