<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <ImageView
        android:id="@+id/header_background"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/navy"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/header_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="24dp"
            android:text="@string/detail_header"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:textStyle="bold" />

    </LinearLayout>

    <ImageView
        android:id="@+id/img_item_story"
        android:transitionName="image"
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:contentDescription="@string/item_image_description"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:src="@tools:sample/avatars"/>

    <TextView
        android:id="@+id/tv_item_story_name"
        android:transitionName="name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/story_name"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/img_item_story"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_item_story_description"
        android:transitionName="description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/story_description"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_item_story_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>