<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.upload.UploadActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <ImageView
            android:id="@+id/header_background"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@color/navy"
            app:layout_constraintTop_toTopOf="parent"/>

        <LinearLayout
            android:id="@+id/header"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/header_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginHorizontal="24dp"
                android:text="@string/upload_header"
                android:textSize="24sp"
                android:textColor="@color/white"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageView
            android:id="@+id/img_preview_story"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginVertical="12dp"
            android:contentDescription="@string/image_preview_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header"
            app:layout_constraintBottom_toTopOf="@+id/button_camera_gallery_layout"
            app:srcCompat="@drawable/ic_preview" />

        <LinearLayout
            android:id="@+id/button_camera_gallery_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/img_preview_story"
            app:layout_constraintBottom_toTopOf="@id/description_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="12dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/button_camera"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/navy"
                android:text="@string/text_camera"
                android:gravity="center" />

            <Space
                android:layout_width="16dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/button_gallery"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/navy"
                android:text="@string/text_gallery"
                android:gravity="center" />
        </LinearLayout>
        
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/description_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            app:layout_constraintBottom_toTopOf="@+id/button_add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:errorEnabled="true">

            <EditText
                android:id="@+id/ed_add_description"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:autofillHints="Description"
                android:gravity="top"
                android:ems="10"
                android:hint="@string/hint_description"
                android:paddingHorizontal="20dp"
                android:inputType="textMultiLine"
                tools:ignore="SpeakableTextPresentCheck" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/button_add"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginBottom="12dp"
            android:backgroundTint="@color/navy"
            android:text="@string/text_upload"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>