<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.main.MainActivity">

    <ImageView
        android:id="@+id/header_background"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/navy"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/header_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginHorizontal="24dp"
            android:text="@string/main_header"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/action_map"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/logout_description"
            android:src="@drawable/ic_map"
            app:tint="@color/white"/>

        <ImageView
            android:id="@+id/action_logout"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="24dp"
            android:contentDescription="@string/logout_description"
            android:src="@drawable/ic_logout"
            app:tint="@color/white"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_story"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/item_story" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/navy"
        android:contentDescription="@string/fab_description"
        app:srcCompat="@drawable/ic_upload"
        app:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
